# tiny-x86-bios-emulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SimpleBootloader.asm  backend_stdout.c  backend_template.c  boot.c  boot.h  build.rb  cpu.c  cpu.h  emu.c  emu.h  event.c  event.h  int10.c  int10.h  main.c  thread.c  thread.h  txbe.cmake  x86_16b.h
